--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Page Title -->
     <title>Portfolio</title>
@@ -45,16 +45,16 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#summary">Summary</a>
+              <a class="nav-link" href="#summary">Summary</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#work">Work Experince</a>
+              <a class="nav-link" href="#work">Work Experince</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#education">Education</a>
+              <a class="nav-link" href="#education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#skills">Skills Summary</a>
+              <a class="nav-link" href="#skills">Skills Summary</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="skills.html">Skills Detailed</a>
@@ -85,7 +85,7 @@
 
           <p class="subtitle">This page contains some of the projects I have
             worked on. In the future, it will contain evidence from all my
-            major disiplines (Mobile, Database, Web, and PC Applications).
+            major disciplines (Mobile, Database, Web, and Desktop Applications).
             The works are added as they become ready.</p>
 
         </div>
@@ -104,7 +104,7 @@
 
         <div class="row">
 
-          <div class="col col-lg-12 col-md-12 col-sm-12 col-12">
+          <div class="col col-lg-12 col-md-12 col-sm-12">
 
             <!-- Video -->
             <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/Sa3UD7lO9GU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -117,8 +117,9 @@
               shown are SMS notifications, registration and OTP (One-Time-Pin)
               functionality.</p>
 
-            <p>Note: This is a first verision prototype for an app that will
-              eventually be completed and released to the Google PlayStore</p>
+            <p>Note: This is a first version prototype, and a new and improved
+              version will be completed in 2020. A practical version will also
+              be released on the Google PlayStore.</p>
 
             <!-- Development Information -->
             <p><strong>Development Information</strong></p>
@@ -132,48 +133,48 @@
 
           </div>
 
-          <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
+          <div class="col col-lg-4 col-md-12 col-sm-12">
 
             <!-- Image 1 -->
-            <img class="portfolio-images" src="Images\m-app1.png" alt="m-app1">
+            <img class="portfolio-images" src="images\m-app1.png" alt="m-app1">
 
             <!-- Image Description -->
-            <p>Home page of the Bank App. Shows of the logged in user's name
-              and icon (placeholder) along with thier accounts incased in a
-              Recycler View. Towards the top section are the majour
+            <p>Home page of the Bank App. Shows of the logged-in user's name
+              and icon (placeholder) along with their accounts encased in a
+              Recycler View. Towards the top section is the major
               functionality buttons which include Payments, Transactions,
               Purchases, and Budgeting (placeholder).</p>
 
           </div>
 
-          <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
+          <div class="col col-lg-4 col-md-12 col-sm-12">
 
             <!-- Image 2 -->
-            <img class="portfolio-images" src="Images\m-app2.png" alt="m-app2">
+            <img class="portfolio-images" src="images\m-app2.png" alt="m-app2">
 
             <!-- Image Description -->
             <p>The Transaction History page of the Bank App. This page is
               reached by clicking on one of the accounts on the home page,
-              each having its own transaction history. Includes a line grapgh
-              that acurratly keeps track of the monetary flow within the app
+              each having its transaction history. Includes a line graph
+              that accurately keeps track of the money flow within the app
               related to the account. Below that is the list view which holds
-              extra detail about the monetary flow such as the previous amount,
-              amount change, new amount, spend category, account category,
-              account number, and timestamp information.</p>
+              extra details such as the previous amount, amount change, new
+              the amount, spend category, account category, account number, and
+              timestamp information.</p>
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12 col-12">
+          <div class="col col-lg-4 col-sm-12">
 
             <!-- Image 3 -->
-            <img class="portfolio-images" src="Images\m-app3.png" alt="m-app3">
+            <img class="portfolio-images" src="images\m-app3.png" alt="m-app3">
 
             <!-- Image Description -->
-            <p>The data Purchase page shows how the interface will look when the
-              user attempts to purchasse data for thier specific carrier. The
-              top portion is a horizontal scrollview showing the carriers while
-              the lower portion is a vertical scrollview showing the data and
-              the price of it.</p>
+            <p>The data purchase page shows how the interface will look when the
+              user attempts to purchase data for their specific carrier. The
+              the top portion is a horizontal scroll view showing the carriers while
+              the lower portion is a vertical scroll view showing the data and
+              the price.</p>
 
           </div>
 
@@ -193,7 +194,7 @@
 
         <div class="row">
 
-          <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
+          <div class="col col-lg-6 col-md-12 col-sm-12">
 
             <!-- Video 1 -->
             <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/lqiPo2jiahg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -215,7 +216,7 @@
 
           </div>
 
-          <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
+          <div class="col col-lg-6 col-md-12 col-sm-12">
 
             <!-- Video 2 -->
             <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/vKT-Fgt3d6I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -238,21 +239,21 @@
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12 col-12">
+          <div class="col col-lg-4 col-sm-12">
 
             <!-- Image 1 -->
-            <img class="portfolio-images" src="Images\w-app1.png" alt="w-app1">
+            <img class="portfolio-images" src="images\w-app1.png" alt="w-app1">
 
             <!-- Image Description -->
-            <p>The top of the tindog website. Shows off the layout mad ethrough
+            <p>The top of the tindog website. Shows off the layout made through
               CSS3 and the Bootstrap 4 (navbar and buttons) implementation.</p>
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12 col-12">
+          <div class="col col-lg-4 col-sm-12">
 
             <!-- Image 2 -->
-            <img class="portfolio-images" src="Images\w-app2.png" alt="w-app2">
+            <img class="portfolio-images" src="images\w-app2.png" alt="w-app2">
 
             <!-- Image Description -->
             <p>The midsection of the tindog website. Shows off the Bootstrap 4
@@ -260,10 +261,10 @@
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12 col-12">
+          <div class="col col-lg-4 col-sm-12">
 
             <!-- Image 3 -->
-            <img class="portfolio-images" src="Images\w-app3.png" alt="w-app3">
+            <img class="portfolio-images" src="images\w-app3.png" alt="w-app3">
 
             <!-- Image Description -->
             <p>The bottom of the tindog website. Showing off an understanding of
@@ -277,6 +278,29 @@
 
     </section>
 
+
+
+    <!-- Desktop Portfolio -->
+    <section id="mobile-portfolio" class="light">
+
+      <div class="container-fluid">
+
+        <h2>Desktop Applications</h2>
+
+        <div class="row">
+
+          <div class="col col-lg-12 col-md-12 col-sm-12">
+
+            <!-- Image Description -->
+            <p>Coming Soon</p>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
 
 
     <section id="footer" class="dark">
