--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Page Title -->
     <title>Skills</title>
@@ -45,16 +45,16 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#summary">Summary</a>
+              <a class="nav-link" href="#summary">Summary</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#work">Work Experince</a>
+              <a class="nav-link" href="#work">Work Experince</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#education">Education</a>
+              <a class="nav-link" href="#education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#skills">Skills Summary</a>
+              <a class="nav-link" href="#skills">Skills Summary</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="skills.html">Skills Detailed</a>
@@ -87,11 +87,11 @@
             Competencies
           </h1>
 
-          <p class="subtitle">This page contains a more indepth looks at my
-            skills and experiences with the my different diciplines (Mobile,
-            Database, Web, and PC App Development). It contains extra
+          <p class="subtitle">This page contains more in-depth looks at my
+            skills and experiences with my different disciplines (Mobile,
+            Database, Web, and Desktop App Development). It contains extra
             information such as specific aspects of languages where applicable
-            and a general timeframe of my experince with them</p>
+            and a general timeframe of my experience with them.</p>
 
         </div>
 
@@ -108,17 +108,17 @@
         <!-- PC App Skills-->
         <div class="detailed-skill-row">
 
-          <h2>PC Application Development</h2>
+          <h2>Desktop Application Development</h2>
 
           <!-- PC App Image-->
-          <img class="skill-icons" src="Images/computer.png" alt="pc icon">
+          <img class="skill-icons" src="images/computer.png" alt="pc icon">
 
           <!-- Credit-->
           <p class="credit">"Icon made by Chanut from <a href="www.flaticon.com">
             www.flaticon.com</a>"</p>
 
           <h3>C#</h3>
-          <p>.NET, ADO.NET, ASP.NET, Windows Forms, WPF
+          <p>.NET, ADO.NET, ASP.NET, MVVM Light, MVVM Pattern, Windows Forms, WPF, XAML
           <br>
           (3 Years of Experience)</p>
 
@@ -133,21 +133,21 @@
           <h2>Mobile Application Development</h2>
 
           <!-- Mobile Image-->
-          <img class="skill-icons" src="Images/smartphone.png" alt="mobile icon">
+          <img class="skill-icons" src="images/smartphone.png" alt="mobile icon">
 
           <!-- Credit-->
           <p class="credit">"Icon made by Freepik from <a href="www.flaticon.com">
             www.flaticon.com</a>"</p>
 
           <h3>Android</h3>
-          <p>Java, Android API’s, Gradle, JSON, Maven
+          <p>Android API’s, Gradle, Java, JSON, Maven, XML
           <br>
           (2 Years of Experience)</p>
 
           <h3>Flutter</h3>
           <p>Dart
           <br>
-          (1 Year of Experience)</p>
+          (Less than 1 Year of Experience)</p>
         </div>
 
         <!-- Database Skills-->
@@ -156,13 +156,13 @@
           <h2>Databases Development</h2>
 
           <!-- Database Image-->
-          <img class="skill-icons" src="Images/server.png" alt="database icon">
+          <img class="skill-icons" src="images/server.png" alt="database icon">
 
           <!-- Credit-->
           <p class="credit">"Icon made by DinosoftLabs from
             <a href="www.flaticon.com">www.flaticon.com</a>"</p>
 
-          <h3>MS SQL Server </h3>
+          <h3>MS SQL Server</h3>
           <p>(T-SQL)
           <br>
           (3 Years of Experience)</p>
@@ -177,16 +177,21 @@
           <br>
           (2 Years of Experience)</p>
 
-          <h3>IBM DB2</h3>
-          <p>(1 Year of Experience)</p>
-
           <h3>Oracle</h3>
           <p>(PL/SQL)
           <br>
           (1 Year of Experience)</p>
 
+          <h3>ParseSDK</h3>
+          <p>.NET
+          <br>
+          (Less than 1 Year of Experience)</p>
+
+          <h3>IBM DB2</h3>
+          <p>(Less than 1 Year of Experience)</p>
+
           <h3>MySQL</h3>
-          <p>(1 Year of Experience)</p>
+          <p>(Less than 1 Year of Experience)</p>
         </div>
 
         <!-- Web App Skills-->
@@ -195,7 +200,7 @@
           <h2>Web Application Development</h2>
 
           <!-- Web App Image-->
-          <img class="skill-icons" src="Images/domain.png" alt="web icon">
+          <img class="skill-icons" src="images/domain.png" alt="web icon">
 
           <!-- Credit-->
           <p class="credit">"Icon made by Freepik from <a href="www.flaticon.com">
@@ -214,11 +219,6 @@
           <br>
           (2 Years of Experience)</p>
 
-          <h3>Bootstrap</h3>
-          <p>Bootstrap 4.X, Wireframing, Grid Layouts, Cards, Navbars, Carousels, etc
-          <br>
-          (2 Years of Experience)</p>
-
           <h3>JavaScript</h3>
           <p>ES6
           <br>
@@ -228,6 +228,11 @@
           <p>Document Object Model
           <br>
           (1 Year of Experience)</p>
+
+          <h3>Bootstrap</h3>
+          <p>Bootstrap 4.X, Wireframing, Grid Layouts, Cards, Navbars, Carousels, etc
+          <br>
+          (2 Years of Experience)</p>
 
           <h3>PHP</h3>
           <p>(1 Year of Experience)</p>
@@ -239,36 +244,38 @@
           <h2>Miscellaneous Experience</h2>
 
           <!-- Miscellaneous Image-->
-          <img class="skill-icons" src="Images/post-it.png" alt="misc icon">
+          <img class="skill-icons" src="images/post-it.png" alt="misc icon">
 
           <!-- Credit-->
           <p class="credit">"Icon made by Freepik from
           <a href="www.flaticon.com">www.flaticon.com</a>"</p>
 
-          <h3>Git</h3>
-          <p>GitHub, Git Bash, Android Studio VC Integration</p>
+          <h3>Version Control</h3>
+          <p>Bitbucket, GitHub, Git Bash, Sourcetree, Android Studio VC
+            Integration</p>
 
           <h3>IDE Experience</h3>
-          <p>Android Studio, Atom, Aquafold, Data Studio Client, Expression Web,
-            NetBeans, Notepad, Notepad++, Oracle Apex, Oracle SQL Developer,
-            Sublime Text, SSMS, Visual Studio, Visual Studio Code</p>
+          <p>Android Studio, Atom, Aquafold, Data Studio Client, Expression
+            Web, NetBeans, Notepad, Notepad++, Oracle Apex, Oracle SQL
+            Developer, Sublime Text, SSMS, Visual Studio, Visual Studio Code</p>
 
           <h3>Theoretical Experience</h3>
           <p>Object orientated Programming / OOP Concepts, SOLID Principles,
             Data Structures & Algorithms, Documentation, DRY</p>
 
-          <h3>Virtulisation</h3>
+          <h3>Virtualization</h3>
           <p>VMware Workstation, Oracle VM VirtualBox, Hyper-V</p>
 
           <h3>OS Expereince</h3>
-          <p>Windows, MacOS, Linux (Kali & Fedora)</p>
+          <p>Windows, MacOS, Linux (Fedora & Kali)</p>
 
           <h3>Office Experience</h3>
-          <p>Excel, Mail, OneNote, Outlook, PowerPoint, Visio, Word, Google Docs, Google Drive</p>
+          <p>Excel, Mail, OneNote, Outlook, PowerPoint, Visio, Word, Google
+            Docs, Google Drive</p>
 
           <h3>Soft Skills</h3>
-          <p>Self-motivated, Very Flexible, Ambitious, Team Player, Always
-            Learning, Ambitious</p>
+          <p>Always Learning, Ambitious, Can Work from Home, Self-motivated,
+            Team Player, Very Flexible</p>
         </div>
 
       </div>
