--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Page Title -->
     <title>Home</title>
@@ -45,16 +45,16 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#summary">Summary</a>
+              <a class="nav-link" href="#summary">Summary</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#work">Work Experince</a>
+              <a class="nav-link" href="#work">Work Experince</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#education">Education</a>
+              <a class="nav-link" href="#education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#skills">Skills Summary</a>
+              <a class="nav-link" href="#skills">Skills Summary</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="skills.html">Skills Detailed</a>
@@ -89,7 +89,8 @@
             </h1>
 
             <p class="subtitle">I'm a Software Developer skilled in end-to-end
-              development in Web, Mobile, Databases, and PC App Development</p>
+              development in Web, Mobile, Databases, and Desktop
+              App Development</p>
 
           </div>
 
@@ -117,10 +118,11 @@
 
         <h2>Summary</h2>
 
-        <p>I’m a software Developer Intern that is well-versed in many
-          programming languages. I specialize in end-to-end development in C#,
-          Android and Databases primarily, and I have interests in Machine
-          learning and hybrid mobile development.</p>
+        <p>I’m a Junior Software Developer that is well-versed in many
+          programming languages. I specialize in end-to-end development
+          in C#, Android and Databases primarily and I have interests in
+          Machine Learning and hybrid mobile development. Please visit my
+          website that’s attached above to view some of my work.</p>
 
       </div>
 
@@ -158,7 +160,54 @@
 
             <!-- Row 1  -->
             <tr>
-              <th scope="row">10/2019 to Current</th>
+              <th scope="row">02/2020 to Current</th>
+
+              <td>Junior Software Developer</td>
+
+              <td><a class="links-dark" href="https://www.eziworksolutions.com">EziWork Solutions</a>, Hillcrest, KZN</td>
+
+              <td>
+                - Create New App Features
+                <br>
+                - Update Existing Modules
+                <br>
+                - Utilizing WPF & MVVM
+                <br>
+                - Performing Unit & Integration Testing
+              </td>
+            </tr>
+
+            <!-- Row 2  -->
+            <tr>
+              <th scope="row">15/01/2020 to 28/01/2020</th>
+
+              <td>IT Support</td>
+
+              <td><a class="links-dark" href="https://www.mpcconnect.co.za">MPC Connect</a>, Umhlanga, KZN</td>
+
+              <td>
+                - Assist Staff with Computer Related Technical Issues
+                <br>
+                - Document Filing
+              </td>
+            </tr>
+
+            <!-- Row 3  -->
+            <tr>
+              <th scope="row">01/01/2020 to 14/01/2020</th>
+
+              <td>Software Developer Intern</td>
+
+              <td><a class="links-dark" href="https://www.xcallibre.com">Xcallibre</a>, Berea, KZN</td>
+
+              <td>
+                - SQL Encryption Research & Documentation for their Systems
+              </td>
+            </tr>
+
+            <!-- Row 4  -->
+            <tr>
+              <th scope="row">10/2019 to 12/2019</th>
 
               <td>Software Developer Trainee</td>
 
@@ -167,12 +216,12 @@
               <td>
                 - DB2 Training
                 <br>
-                - Revenue Managment System (RMS) Training
+                - Revenue Management System (RMS) Training
               </td>
             </tr>
 
 
-            <!-- Row 2 -->
+            <!-- Row 5 -->
             <tr>
               <th scope="row">07/2019 to 09/2019</th>
 
@@ -192,7 +241,7 @@
             </tr>
 
 
-            <!-- Row 3 -->
+            <!-- Row 6 -->
             <tr>
               <th scope="row">04/2019 to 06/2019</th>
 
@@ -345,11 +394,11 @@
               <div class="skill-row">
 
                 <!-- PC App Image-->
-                <img class="skill-icons left" src="Images/computer.png"
+                <img class="skill-icons left" src="images/computer.png"
                 alt="pc icon">
 
-                <h3>PC App Development</h3>
-                <p class="skill-description-left">I have extensive experince
+                <h3>Desktop App Development</h3>
+                <p class="skill-description-left">I have extensive experience
                   in C# and Java. I can work on the front-end / GUI and the
                   backend portions of these programs. I am constantly further
                   developing my skills on both.
@@ -364,7 +413,7 @@
               <div class="skill-row">
 
                 <!-- Mobile Image-->
-                <img class="skill-icons right" src="Images/smartphone.png"
+                <img class="skill-icons right" src="images/smartphone.png"
                 alt="mobile icon">
 
                 <h3>Mobile App Development</h3>
@@ -385,14 +434,14 @@
               <div class="skill-row">
 
                 <!-- Database Image-->
-                <img class="skill-icons left" src="Images/server.png"
+                <img class="skill-icons left" src="images/server.png"
                 alt="database icon">
 
                 <h3>Database Development</h3>
-                <p class="skill-description-left">I have experince in multiple
-                  traditional database langauges and some cloud focused ones.
+                <p class="skill-description-left">I have experience in multiple
+                  traditional database languages and some cloud-focused ones.
                   My aim for 2020 is to bolster my Azure skillset and further
-                  intergrate all my apps to make seemless user experiences that
+                  integrate all my apps to make seamless user experiences that
                   carry over progress from one platform to another.</p>
 
               </div>
@@ -405,7 +454,7 @@
               <div class="skill-row">
 
                 <!-- Web App Image-->
-                <img class="skill-icons right" src="Images/domain.png"
+                <img class="skill-icons right" src="images/domain.png"
                 alt="web icon">
 
                 <h3>Web App Development</h3>
@@ -424,12 +473,12 @@
               <div class="skill-row">
 
                 <!-- Miscellaneous Image-->
-                <img class="skill-icons left" src="Images/post-it.png"
+                <img class="skill-icons left" src="images/post-it.png"
                 alt="misc icon">
 
                 <h3>IDE Experience</h3>
                 <p class="skill-description-left">I have experience in many
-                  IDE's amd other related studios for each of my disiplines.
+                  IDE's and other related studios for each of my disciplines.
                   For more detail on these please check the detailed skills
                   section</p>
 
