--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
 
         <div class="row">
 
-          <div class="col col-lg-12 col-md-12 col-sm-12">
+          <div class="col col-lg-12 col-md-12 col-sm-12 col-12">
 
             <!-- Video -->
             <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/Sa3UD7lO9GU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -133,10 +133,10 @@
 
           </div>
 
-          <div class="col col-lg-4 col-md-12 col-sm-12">
+          <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
 
             <!-- Image 1 -->
-            <img class="portfolio-images" src="images\m-app1.png" alt="m-app1">
+            <img class="portfolio-images" src="Images\m-app1.png" alt="m-app1">
 
             <!-- Image Description -->
             <p>Home page of the Bank App. Shows of the logged-in user's name
@@ -147,10 +147,10 @@
 
           </div>
 
-          <div class="col col-lg-4 col-md-12 col-sm-12">
+          <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
 
             <!-- Image 2 -->
-            <img class="portfolio-images" src="images\m-app2.png" alt="m-app2">
+            <img class="portfolio-images" src="Images\m-app2.png" alt="m-app2">
 
             <!-- Image Description -->
             <p>The Transaction History page of the Bank App. This page is
@@ -164,10 +164,10 @@
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12">
+          <div class="col col-lg-4 col-sm-12 col-12">
 
             <!-- Image 3 -->
-            <img class="portfolio-images" src="images\m-app3.png" alt="m-app3">
+            <img class="portfolio-images" src="Images\m-app3.png" alt="m-app3">
 
             <!-- Image Description -->
             <p>The data purchase page shows how the interface will look when the
@@ -194,7 +194,7 @@
 
         <div class="row">
 
-          <div class="col col-lg-6 col-md-12 col-sm-12">
+          <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
 
             <!-- Video 1 -->
             <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/lqiPo2jiahg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -216,7 +216,7 @@
 
           </div>
 
-          <div class="col col-lg-6 col-md-12 col-sm-12">
+          <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
 
             <!-- Video 2 -->
             <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/vKT-Fgt3d6I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -239,21 +239,21 @@
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12">
+          <div class="col col-lg-4 col-sm-12 col-12">
 
             <!-- Image 1 -->
-            <img class="portfolio-images" src="images\w-app1.png" alt="w-app1">
+            <img class="portfolio-images" src="Images\w-app1.png" alt="w-app1">
 
             <!-- Image Description -->
-            <p>The top of the tindog website. Shows off the layout made through
+            <p>The top of the tindog website. Shows off the layout mad ethrough
               CSS3 and the Bootstrap 4 (navbar and buttons) implementation.</p>
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12">
+          <div class="col col-lg-4 col-sm-12 col-12">
 
             <!-- Image 2 -->
-            <img class="portfolio-images" src="images\w-app2.png" alt="w-app2">
+            <img class="portfolio-images" src="Images\w-app2.png" alt="w-app2">
 
             <!-- Image Description -->
             <p>The midsection of the tindog website. Shows off the Bootstrap 4
@@ -261,10 +261,10 @@
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12">
+          <div class="col col-lg-4 col-sm-12 col-12">
 
             <!-- Image 3 -->
-            <img class="portfolio-images" src="images\w-app3.png" alt="w-app3">
+            <img class="portfolio-images" src="Images\w-app3.png" alt="w-app3">
 
             <!-- Image Description -->
             <p>The bottom of the tindog website. Showing off an understanding of
