--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
               <td>Junior Software Developer</td>
 
-              <td><a class="links-dark" href="https://www.eziworksolutions.com">EziWork Solutions</a>, Hillcrest, KZN</td>
+              <td><a class="links-dark" href="https://www.eziworksolutions.com">eziWork Solutions</a>, Hillcrest, KZN</td>
 
               <td>
                 - Create New App Features
@@ -396,7 +396,7 @@
                 <img class="skill-icons left" src="Images/computer.png"
                 alt="pc icon">
 
-                <h3 class="ss-pc">PC App Development</h3>
+                <h3 class="ss-pc">Desktop App Development</h3>
                 <p class="skill-description-left">I have extensive experience
                   in C# and Java. I can work on the front-end / GUI and the
                   backend portions of these programs. I am constantly further
