--- a/portfolio.html
+++ b/portfolio.html
@@ -291,8 +291,96 @@
 
           <div class="col col-lg-12 col-md-12 col-sm-12">
 
+            <!-- Video 1 -->
+            <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/tmXj38Uurts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <p>Video showing off a feature for clients that would assist them
+              in planning and tracking their task-based activities for the
+              workers who aren't simply paid via hours worked, ideal for farm
+              or field staff. Some features not shown in the interest of time.</p>
+
+            <p>Note: The version shown was a work in progress nearing completion
+              so some elements were subject to change.</p>
+
+            <!-- Development Information -->
+            <p><strong>Development Information</strong></p>
+            <p>
+              Completion Status: Complete
+              <br>
+              Development Time: 2 Months
+              <br>
+              Completion Date: May 2020
+            </p>
+
+          </div>
+
+          <div class="col col-lg-4 col-sm-12 col-12">
+
+            <!-- Image 1 -->
+            <img class="portfolio-images" src="Images\ews-job-cards-feature.png" alt="ews-job-cards-feature">
+
             <!-- Image Description -->
-            <p>Coming Soon</p>
+            <p>The main portion of the Job Cards feature. This is where most of
+              the time will be spent once the masters are set up. It shows all
+              work the order of PENDING, IN-PROGRESS, COMPLETE, CANCELLED and
+              ABORTED for easier navigation. The pane on the left allows the
+              user to further filter down the visible results.</p>
+
+          </div>
+
+          <div class="col col-lg-4 col-sm-12 col-12">
+
+            <!-- Image 2 -->
+            <img class="portfolio-images" src="Images\ews-job-card-details.png" alt="ews-job-card-details">
+
+            <!-- Image Description -->
+            <p>The details window of the Job Cards. When creating a new Job Card
+              many of the fields are blank vs when editing/updating an existing
+              one as shown above. The employees' section shows the linked
+              employees and the activities shows the linked activities. each
+              employee has their record of the activities to facilitate
+              tracking their work progress.</p>
+
+          </div>
+
+          <div class="col col-lg-4 col-sm-12 col-12">
+
+            <!-- Image 3 -->
+            <img class="portfolio-images" src="Images\ews-job-template.png" alt="ews-job-template">
+
+            <!-- Image Description -->
+            <p>This shows the Job Templates. These are used to create templates
+              for the job cards so that creating job cards is quicker since all
+              they need is to select the dates, template and employees.
+              Everything else is auto-completed based on the template selection.</p>
+
+          </div>
+
+          <div class="col col-lg-4 col-sm-12 col-12">
+
+            <!-- Image 4 -->
+            <img class="portfolio-images" src="Images\ews-job-template-details.png" alt="ews-job-template-details">
+
+            <!-- Image Description -->
+            <p>The Job Template Details window. The activities section holds
+              the individual activities related to that template and those have
+              specific values. For instance, installing fibre in different
+              areas will generally take the same activities and so they are
+              kept in the same template.</p>
+
+          </div>
+
+          <div class="col col-lg-4 col-sm-12 col-12">
+
+            <!-- Image 5 -->
+            <img class="portfolio-images" src="Images\ews-checkin-feature.png" alt="ews-checkin-feature">
+
+            <!-- Image Description -->
+            <p>A device monitoring feature. The first feature I completed. It was
+              a revamp of an existing feature and so it took me about
+              1 Week to complete. Improvements made were the adjustments to the
+              UI and improvements to the data selection process to reduce long
+              load times.</p>
 
           </div>
 
