--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
 
     <!-- Local CSS -->
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" href="Images/favicon2.ico">
 
     <!-- Page Title -->
     <title>Portfolio</title>
@@ -108,24 +109,21 @@
           <div class="col col-lg-12 col-md-12 col-sm-12">
 
             <!-- Video 1 -->
-            <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/tmXj38Uurts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/Q0kOchETKqs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <p>Video showing off a feature for clients that would assist them
               in planning and tracking their task-based activities for the
               workers who aren't simply paid via hours worked, ideal for farm
               or field staff. Some features not shown in the interest of time.</p>
 
-            <p>Note: The version shown was a work in progress nearing completion
-              so some elements were subject to change.</p>
-
             <!-- Development Information -->
             <p><strong>Development Information</strong></p>
             <p>
               Completion Status: Complete
               <br>
-              Development Time: 2 Months
+              Development Time: 3 Months
               <br>
-              Completion Date: May 2020
+              Completion Date: June 2020
             </p>
 
           </div>
@@ -197,6 +195,17 @@
               1 Week to complete. Improvements made were the adjustments to the
               UI and improvements to the data selection process to reduce long
               load times.</p>
+
+          </div>
+
+          <div class="col col-lg-4 col-sm-12 col-12">
+
+            <!-- Image 5 -->
+            <img class="portfolio-images" src="Images\ews-sourcetree.png" alt="ews-sourcetree">
+
+            <!-- Image Description -->
+            <p>This image shows off some experience where I am utilizing
+              Sourcetree which was linked to the companies Bitbucket account.</p>
 
           </div>
 
