--- a/skills.html
+++ b/skills.html
@@ -12,6 +12,7 @@
 
     <!-- Local CSS -->
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" href="Images/favicon2.ico">
 
     <!-- Page Title -->
     <title>Skills</title>
